= 3.3.2 (not released)
- Fix subforms inside subforms
- Fix draggable for jquery-rails 3 gem

= 3.3.1
- Set adapter colspan (nested lists and forms) using javascript, fixed issue when active_scaffold_config_list is used
- Fix bug saving default values when get method is overrided on model to return default value
- Fix close action_link without adapter
- Fix update calculations after destroy a row
- Fix count and calculate searching with count_includes
- Fix action_after_create
- Cache associations options (for :select form_ui on associations), it can be disabled with config.cache_association_options = false
- Clean some code so we can stop changing @record in partials and using @record in helpers
- Support jquery-rails 3 gem and jquery-ui-rails gem
- Clean some invalid HTML
- Add store_user_settings option to enable storing sort, page and search params into session (enabled by default for backwards compatibility)
- Fix each_record_in_scope when conditions_for_collection needs some includes
- Add method to override label in search fields (field_search)
- Add method to override attributes for column headings on list
- Support security_method and ignore_method in column's link
- render :super should work for every render call (with partial and locals or with only one hash)

= 3.3.0
- Unify field overrides and list_ui method signatures
- Improve performance removing some partials and adding some caching for helper overrides and UIs, and caching url generation for lists (caching url is optional)
- Drop support for rails 3.1
- Add HTML5 form fields
- Add :chosen form_ui, and :chosen and :multi_chosen search_ui
- Fix nested with has_one associations, and belongs_to associations with :list action
- Support optgroup in :select and :chosen form_ui
- Support render_form_field with multiple rows (rows with associated-record class)
- Support for updating columns, row or table after updating a column with inplace_edit