@@ -1,6 +1,7 @@
 = 3.3.2 (not released)
 - Fix subforms inside subforms
 - Fix draggable for jquery-rails 3 gem
+- Support to change attributes in list column headings with column_heading_attributes helper
 
 = 3.3.1
 - Set adapter colspan (nested lists and forms) using javascript, fixed issue when active_scaffold_config_list is used
